# epykit

./: .coverage  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  TODO.md  TODO_cline.md  TODO_copilot.md  TODO_haiku.md  epykit_todo.md  epykit_todo2.md  epykit_todo3.md  plan_amk.md  plan_to_refactor.md  pyproject.toml  samplesheet.csv  scratch.ipynb  scratch.py  scratch_regions.bed  small_samplesheet.csv  test_6samples.py  test_regions_6.bed  test_sparse_full_pipeline.py
.github/workflows/: test.yml
bioconda/: meta.yaml
src/epykit/: __init__.py
src/epykit/core/: __init__.py  methyldata.py  parquet_backend.py
src/epykit/intervals/: __init__.py  tiling.py
src/epykit/io/: __init__.py  anndata_builder.py  anndata_builder_chunked.py  anndata_builder_duckdb.py  bismark.py  generic.py  parquet_converter.py  regions.py  sample_sheet.py
src/epykit/plot/: __init__.py  qc.py
src/epykit/stats/: __init__.py  calculate_diff_meth_chromwise.py  dmr.py  dmr_processor_chromwise.py  glm_vectorized.py  tests.py
src/pymethyl/: __init__.py
src/pymethyl/core/: __init__.py  methyldata.py
src/pymethyl/intervals/: __init__.py  tiling.py
src/pymethyl/io/: __init__.py  anndata_builder.py  anndata_builder_chunked.py  bismark.py  generic.py  sample_sheet.py
src/pymethyl/plot/: __init__.py  qc.py
src/pymethyl/stats/: __init__.py  dmr.py  tests.py
tests/: analysis.ipynb  analysis.py  analysis.qmd  conftest.py  scratch.ipynb  test_core.py  test_intervals.py  test_io.py  test_stats.py  test_stats_chromwise.py
workflow/: Snakefile
workflow/config/: config.yaml
workflow/envs/: pymethyl.yaml
workflow/scripts/: diff_meth.py  load_samples.py  merge_dmrs.py  qc_plots.py  tile_diff_meth.py
